--- a/CSS/blog-style.css
+++ b/CSS/blog-style.css
@@ -1,31 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-  font-family: "Verdana", "sans-serif";
-  margin: 1in;
-  background-color: #fffbf2;
-  color: #4a4458;
-  justify-content: center;
+    font-family: "Atkinson Hyperlegible Next", "Verdana", "sans-serif";
+    margin: 1in;
+    background-color: #fffbf2;
+    color: #4a4458;
+    display: grid;
+    place-items: center;
+    overflow-x: hidden;
 }
 
 h1 {
-  font-family: "Georgia", "Garamond", "serif";
-  font-size: 56px;
-  font-kerning: auto;
-  text-align: center;
-  color: #3b2349;
-  font-weight: 1000;
-  font-style: italic;
+    font-family: "Spectral", "Georgia", "serif";
+    font-size: 72px;
+    font-kerning: auto;
+    line-height: 0.8;
+    text-align: center;
+    color: #3b2349;
+    font-weight: 800;
+    font-style: italic;
+    margin: 32px 16px;
 }
 
 h2 {
-  font-family: "Georgia", "Times New Roman", "serif";
-  font-size: 22px;
-  color: #5b3765;
-  text-align: left;
+    font-family: "Georgia", "Times New Roman", "serif";
+    font-size: 22px;
+    color: #5b3765;
+    text-align: left;
+    width: 100%;
 }
 
 h4 {
-  text-align: center;
-  font-size: 20px;
+    text-align: center;
+    font-size: 20px;
 }
 
 h3 {
@@ -68,12 +86,64 @@ sup {
 }
 
 .table-of-contents {
-  border: 2px solid #7f4f82;
-  padding: 15px;
-  margin: 20px 0;
-  background-color: #fffbf2;
-  border-radius: 10px;
-  width: 350px;
+    border: 2px solid #7f4f82;
+    padding: 20px;
+    margin: 20px;
+    background-color: #fffbf2;
+    border-radius: 10px;
+    width: 350px;
     max-width: 90%;
+}
+
+.table-of-contents h2 {
+    margin-bottom: 10px;
+}
+
+.table-of-contents ol {
+    list-style-type: upper-latin;
+    padding-left: 20px;
+}
+
+.table-of-contents ol li::marker {
+    color: #7f4f82;
+    font-weight: bold;
+    margin-right: 10px;
 
 }
+
+.table-of-contents a {
+    color: #7f4f82;
+    text-decoration: none;
+    font-weight: bold;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    border: 1px solid #7f4f82;
+    display: inline-block;
+    margin-bottom: 2px;
+    border-radius: 20px;
+    margin-left: 10px;
+}
+
+.table-of-contents a:visited {
+    color: #ab73af;
+}
+
+.table-of-contents a:focus {
+    background-color: #fffbf2;
+    color: #7f4f82;
+    text-decoration: none;
+}
+
+.table-of-contents a:hover {
+    text-decoration: underline;
+    background-color: #7f4f82;
+    color: #fffbf2;
+}
+
+.table-of-contents a:active {
+    background-color: #fffbf2;
+    color: #7f4f82;
+    text-decoration: none;
+}
+
