--- a/CSS/blog-style.css
+++ b/CSS/blog-style.css
@@ -13,17 +13,18 @@ html {
 
 body {
     font-family: "Atkinson Hyperlegible Next", "Verdana", "sans-serif";
-    margin: 1in;
+    padding: clamp(10px, 5vw, 1in);
+    box-sizing: border-box;
     background-color: #fffbf2;
     color: #4a4458;
-    display: grid;
+    display: block;
     place-items: center;
-    overflow-x: hidden;
+
 }
 
 h1 {
     font-family: "Spectral", "Georgia", "serif";
-    font-size: 72px;
+    font-size: clamp(32px, 10vw, 72px);
     font-kerning: auto;
     line-height: 0.8;
     text-align: center;
@@ -39,6 +40,8 @@ h2 {
     color: #5b3765;
     text-align: left;
     width: 100%;
+    margin-bottom: 16px;
+    scroll-margin-top: 20px;
 }
 
 h4 {
@@ -91,7 +94,7 @@ sup {
     margin: 20px;
     background-color: #fffbf2;
     border-radius: 10px;
-    width: 350px;
+    width: 500px;
     max-width: 90%;
 }
 
@@ -136,7 +139,6 @@ sup {
 }
 
 .table-of-contents a:hover {
-    text-decoration: underline;
     background-color: #7f4f82;
     color: #fffbf2;
 }
@@ -145,5 +147,29 @@ sup {
     background-color: #fffbf2;
     color: #7f4f82;
     text-decoration: none;
+}
+
+.image-gallery {
+    column-count: 1;
+    column-gap: 15px;
+    max-width: 100%;
+    column-fill: balance;
+}
+
+@media (min-width: 540px) { .image-gallery { column-count: 2; } }
+@media (min-width: 792px) { .image-gallery { column-count: 3; } }
+@media (min-width: 1100px) { .image-gallery { column-count: 4; } }
+
+.image-gallery-item {
+    display: inline-block;
+    margin-bottom: 10px;
+    width: 100%;
+    break-inside: avoid;
+
+}
+
+.image-gallery-item img {
+    display: inline-block;
+    width: 100%;
 }
 
