--- a/CSS/blog-style.css
+++ b/CSS/blog-style.css
@@ -13,13 +13,18 @@ html {
 
 body {
     font-family: "Atkinson Hyperlegible Next", "Verdana", "sans-serif";
+    margin: 0;
+    padding: 0;
+}
+
+.content {
     padding: clamp(10px, 5vw, 1in);
+    padding-top: 1in;
     box-sizing: border-box;
     background-color: #fffbf2;
     color: #4a4458;
     display: block;
     place-items: center;
-
 }
 
 h1 {
@@ -70,6 +75,121 @@ sup {
   font-style: italic;
 }
 
+a {
+    text-decoration: none;
+    color: #7f4f82;
+}
+
+a:visited {
+    color: #3b2349;
+}
+
+a:hover {
+    background-color: #3b2349;
+    color: #fffbf2;
+}
+
+nav {
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    gap: 16px;
+    background: #3b2349;
+    padding: 20px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+nav p {
+    font-family: "Spectral", "Georgia", "serif";
+    color: #fffbf2;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+    letter-spacing: 1.2px;
+    text-align: left;
+}
+
+.menu-checkbox {
+    display: none;
+}
+
+.menu-symbol {
+    display: none;
+    cursor: pointer;
+    font-size: 32px; /* Adjust icon size here */
+    color: #fffbf2;
+}
+
+@media (max-width: 850px) {
+    .menu-symbol {
+        display: block;
+    }
+
+    nav p {
+        font-size: 24px;
+    }
+
+    /* Hide the nav links until the checkbox is checked */
+    .nav-links {
+        display: none;
+        position: absolute;
+        top: 100%; /* Sits exactly under the nav bar */
+        left: 0;
+        width: 100%;
+        background-color: #3b2349;
+        padding: 20px;
+
+        /* THE KEY: Stack them vertically */
+        flex-direction: column;
+        align-items: center; /* Centers links horizontally */
+        gap: 10px;
+    }
+
+    /* THE TOGGLE: When checkbox is checked, show the nav links */
+    .menu-checkbox:checked ~ .nav-links {
+        display: flex;
+    }
+
+    a#contact-me {
+        margin-left: 0;
+    }
+}
+
+nav a {
+    font-family: "atkinson Hyperlegible Next", "Verdana", "sans-serif";
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    text-decoration: none;
+    background-color: #3b2349;
+    color: #fffbf2;
+    padding: 10px 16px;
+    border-radius: 2em;
+}
+
+nav a:visited {
+    color: #fffbf2;
+}
+
+nav a:hover {
+    background-color: #7f4f82;
+}
+
+a#contact-me {
+    font-weight: bold;
+    color: #3b2349;
+    background: #fffbf2;
+}
+
+a#contact-me:hover {
+    border: 1px solid #fffbf2;
+    color: #fffbf2;
+    background: #3b2349;
+}
+
 .tags {
   display: flex;
   flex-wrap: wrap;
@@ -89,7 +209,7 @@ sup {
 }
 
 .table-of-contents {
-    border: 2px solid #7f4f82;
+    border: 1px solid #7f4f82;
     padding: 20px;
     margin: 20px;
     background-color: #fffbf2;
@@ -183,7 +303,19 @@ sup {
     width: 100%;
 }
 
-.back-to-top {
+.image-gallery-item figcaption {
+    text-align: left;
+    width: 100%;
+    font-size: 14px;
+}
+.image-gallery-item figcaption.source {
+    text-align: left;
+    width: 100%;
+    font-size: 10px;
+    color: #7f4f82;
+}
+
+a.back-to-top {
     position: fixed;
     bottom: 40px;
     right: 40px;
@@ -206,4 +338,5 @@ sup {
     color: #7f4f82;
     bottom: 45px;
 }
+
 
