--- a/CSS/homepage-style.css
+++ b/CSS/homepage-style.css
@@ -76,6 +76,29 @@ nav p {
     margin: 0;
 }
 
+footer {
+    width: 100%;
+    background: #3b2349;
+    height: fit-content;
+    display: flex;
+    padding-top: 30px; 
+    gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+footer p {
+    color: #fffbf2;
+    font-size: 20px;
+    margin: 0;
+}
+
+footer a {
+    text-decoration: underline;
+}
+
+
 .menu-checkbox {
     display: none;
 }
@@ -362,4 +385,28 @@ a.blog-snippet-card:hover {
     display: inline;
     font-size: inherit;
     color: #7f4f82;
+}
+
+a.back-to-top {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    padding: 10px 20px;
+    background-color: #7f4f82;
+    border-radius: 30px;
+    color: #fffbf2;
+    text-decoration: none;
+}
+
+.back-to-top:active {
+    border: 1px solid #7f4f82;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    bottom: 42px;
+}
+
+.back-to-top:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: #fffbf2;
+    color: #7f4f82;
+    bottom: 45px;
 }
