trying another possible fix

--- a/CSS/homepage-style.css
+++ b/CSS/homepage-style.css
@@ -176,7 +176,7 @@ a.contact-me {
     margin: 16px 0;
     border-radius: 2em;
     color: #3b2349 !important;
-    background: #fffbf2;
+    background: #7f4f82;
 }
 
 a.contact-me:visited {
