--- a/CSS/homepage-style.css
+++ b/CSS/homepage-style.css
@@ -176,7 +176,21 @@ a.contact-me {
     margin: 16px 0;
     border-radius: 2em;
     color: #3b2349 !important;
-    background: #7f4f82;
+    background: #fffbf2;
+}
+
+a#nav-contact {
+    color: #3b2349;
+}
+
+a#nav-contact:visited {
+    color: #3b2349;
+}
+
+a#nav-contact:hover {
+    border: 1px solid #fffbf2;
+    color: #fffbf2;
+    background: #3b2349;
 }
 
 a.contact-me:visited {
