--- a/CSS/homepage-style.css
+++ b/CSS/homepage-style.css
@@ -165,7 +165,7 @@ nav a:hover {
     background-color: #7f4f82;
 }
 
-a.contact-me {
+.contact-me {
     font-family: "atkinson Hyperlegible Next", "Verdana", "sans-serif";
     box-sizing: border-box;
     font-size: 16px;
@@ -179,25 +179,11 @@ a.contact-me {
     background: #fffbf2;
 }
 
-a#nav-contact {
+.contact-me:visited {
     color: #3b2349;
 }
 
-a#nav-contact:visited {
-    color: #3b2349;
-}
-
-a#nav-contact:hover {
-    border: 1px solid #fffbf2;
-    color: #fffbf2;
-    background: #3b2349;
-}
-
-a.contact-me:visited {
-    color: #3b2349;
-}
-
-a.contact-me:hover {
+.contact-me:hover {
     border: 1px solid #fffbf2;
     color: #fffbf2;
     background: #3b2349;
@@ -286,18 +272,29 @@ a.contact-me:hover {
     align-items: flex-start;
     justify-content: space-around;
     padding: 16px;
-    width: 30%;
+    width: 500px;
     max-width: 80%;
 }
 
 #start-page-text h1 {
     font-family: "Spectral", "Georgia", serif;
-    font-size: clamp(2.5rem, 5vw, 4.5rem);
+    font-size: 56px;
     color: #fffbf2;
     margin-bottom: 30px;
     line-height: 0.2;
     letter-spacing: 1px;
     font-style: italic;
+}
+
+@media (max-width: 850px) {
+    #start-page-text {
+        margin: 0;
+    }
+
+    #start-page-text h1 {
+        line-height: 1;
+        font-size: 64px;
+    }
 }
 
 #start-page-text h2 {
