--- a/CSS/media-page-style.css
+++ b/CSS/media-page-style.css
@@ -224,19 +224,49 @@ a#contact-me:hover {
 
 /* image gallery */
 .media-container {
-    column-count: 1;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
     column-gap: 50px;
-    max-width: 100%;
+    width: 100%;
     column-fill: balance;
 }
 
 .media-item {
     display: inline-block;
     margin-bottom: 10px;
-    width: 100%;
-    max-width: 500px;
+    width: 500px;
+    max-width:100%;
     break-inside: avoid;
-    padding: 10px;
+    padding: 20px;
+    box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
+}
+
+.media-item p {
+    text-indent: 0;
+}
+
+.media-item img {
+    width: 100%;
+    display: block;
+    margin-top: 10px;
+}
+
+.media-item img+p {
+    font-size: 12px;
+    color: #7f4f82;
+    margin-top: 5px;
+}
+
+.video {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+}
+
+.video iframe {
+    width: 100%;
+    height: 100%;
 }
 
 /* back to top */
@@ -291,6 +321,3 @@ a.back-to-top {
 
     a#contact-me { margin-left: 0; }
 }
-
-@media (min-width: 540px) { .media-container { column-count: 2; } }
-@media (min-width: 792px) { .media-container { column-count: 3; } }
