--- a/CSS/homepage-style.css
+++ b/CSS/homepage-style.css
@@ -62,6 +62,7 @@ a {
     border-radius: 2em;
     color: var(--cream);
     background: var(--purple);
+    transition: background-color 0.3s ease-in-out;
 }
 
 /* Base link states */
