--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -253,6 +253,54 @@ a#contact-me:hover {
     color: #7f4f82;
 }
 
+/* footer */
+footer {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding-top: 30px;
+    background: #3b2349;
+}
+
+footer p {
+    font-size: 20px;
+    color: #fffbf2;
+    margin: 0;
+}
+
+footer a {
+    font-family: "Atkinson Hyperlegible Next", "Verdana", "sans-serif";
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    text-decoration: underline;
+    padding: 10px 16px;
+    margin: 24px 0;
+    border-radius: 2em;
+    color: #fffbf2;
+    background: #3b2349;
+    transition: background-color 0.3s ease-in-out;
+}
+
+footer a:visited {
+    color: #fffbf2;
+}
+
+footer a:hover {
+    border: 1px solid #3b2349;
+    color: #3b2349;
+    background: #fffbf2;
+}
+
+.footer-links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
 /* back to top */
 a.back-to-top {
     position: fixed;
